--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -53,6 +53,8 @@
      <Compile Include="Assets\Rewired\Internal\Scripts\Editor\CustomInspectors\HardwareJoystickTemplateMapInspector.cs" />
      <Compile Include="Assets\Rewired\Internal\Scripts\Editor\CustomInspectors\InputManagerInspector.cs" />
      <Compile Include="Assets\Rewired\Internal\Scripts\Editor\UnityEditorBridge.cs" />
+     <None Include="Assets\Shaders\Mat_SM_OpenBarrel.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Turkey.shader" />
      <None Include="Assets\Shaders\Bookshelf_1_Mat.shader" />
      <None Include="Assets\Shaders\IceShader.shader" />
      <None Include="Assets\Shaders\Mat_IronMaiden.shader" />
@@ -64,19 +66,25 @@
      <None Include="Assets\Shaders\Mat_Torture_Stocks.shader" />
      <None Include="Assets\Shaders\Steve 1.shader" />
      <None Include="Assets\Shaders\Wall_4_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Basin.shader" />
      <None Include="Assets\Shaders\Floor_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_AM_Leverbase.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Pitcher.shader" />
      <None Include="Assets\Shaders\Mat_SM_Padlock.shader" />
      <None Include="Assets\Shaders\Mat_Books_01.shader" />
+     <None Include="Assets\Shaders\Mat_Fireplace.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle1.shader" />
      <None Include="Assets\Shaders\Chain.shader" />
      <None Include="Assets\Shaders\Mat_Tapestry_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
+     <None Include="Assets\Shaders\Mat_SM_CopperSkillet.shader" />
+     <None Include="Assets\Shaders\Mat_SM_DutchOven.shader" />
      <None Include="Assets\Shaders\ColumnRound_1_Mat_B.shader" />
      <None Include="Assets\Shaders\Wall_Doorway_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\licences.txt" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
+     <None Include="Assets\Shaders\Mat_Bench.shader" />
      <None Include="Assets\Shaders\NewShader.shader" />
      <None Include="Assets\Shaders\Mat_Chair.shader" />
      <None Include="Assets\Rewired\Documentation\ReadMe.txt" />
@@ -86,6 +94,7 @@
      <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\Shaders\Mat_Torture_Wheel.shader" />
+     <None Include="Assets\Shaders\Mat_SM_WoodenChair.shader" />
      <None Include="Assets\Shaders\Mat_Chest.shader" />
      <None Include="Assets\Shaders\ColumnsRuined_1_Mat.shader" />
      <None Include="Assets\Shaders\Bread.shader" />
@@ -98,9 +107,12 @@
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Parallax.shader" />
      <None Include="Assets\Shaders\Steve.shader" />
      <None Include="Assets\Shaders\Mat_AM_Arrow.shader" />
+     <None Include="Assets\Shaders\Mat_NightStand.shader" />
+     <None Include="Assets\Shaders\Mat_SM_MoldyBread.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle2.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
      <None Include="Assets\Shaders\Wall_4_Cutout_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_SM_CopperPot.shader" />
      <None Include="Assets\Shaders\Bones_1_Mat.shader" />
      <None Include="Assets\Shaders\SpikeTrap_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_SM_Barrel.shader" />
@@ -124,11 +136,13 @@
      <None Include="Assets\Shaders\Mat_CoatOfArms.shader" />
      <None Include="Assets\Shaders\MultiTexture.shader" />
      <None Include="Assets\Shaders\Mat_LionMount.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Table.shader" />
      <None Include="Assets\Exploder\3rd\P2T.txt" />
      <None Include="Assets\Shaders\Mat_BossDoor_A.shader" />
      <None Include="Assets\Shaders\TombBottom_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Cutlery.shader" />
      <None Include="Assets\Shaders\Mat_Baskets.shader" />
      <None Include="Assets\Shaders\Mat_Log.shader" />
      <None Include="Assets\Shaders\Mat_Padlock.shader" />
@@ -141,16 +155,16 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/Editor/UnityEditor.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>C:/Senior Project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="ShaderForge">
- <HintPath>C:/Senior Project/trunk/Assets/Plugins/ShaderForge/Editor/Code/ShaderForge.dll</HintPath>
- </Reference>
- <Reference Include="Rewired_Editor">
- <HintPath>C:/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Editor/Rewired_Editor.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Plugins/ShaderForge/Editor/Code/ShaderForge.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>C:/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ </Reference>
+ <Reference Include="Rewired_Editor">
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Editor/Rewired_Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Graphs">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
