--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -96,6 +96,7 @@
      <Compile Include="Assets\Resources\Scripts\Environment\MapManager.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\Arrow.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\DoorController.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\HastePotion.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\HealthPotion.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\KeyController.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\LightFlicker.cs" />
@@ -130,6 +131,8 @@
      <Compile Include="Assets\Rewired\Examples\FallbackJoystickIdentification\Scripts\FallbackJoystickIdentificationDemo.cs" />
      <Compile Include="Assets\Rewired\Examples\Shared\Scripts\Bullet.cs" />
      <Compile Include="Assets\Rewired\Internal\Scripts\InputManager.cs" />
+     <None Include="Assets\Shaders\Mat_SM_OpenBarrel.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Turkey.shader" />
      <None Include="Assets\Shaders\Bookshelf_1_Mat.shader" />
      <None Include="Assets\Shaders\IceShader.shader" />
      <None Include="Assets\Shaders\Mat_IronMaiden.shader" />
@@ -141,19 +144,25 @@
      <None Include="Assets\Shaders\Mat_Torture_Stocks.shader" />
      <None Include="Assets\Shaders\Steve 1.shader" />
      <None Include="Assets\Shaders\Wall_4_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Basin.shader" />
      <None Include="Assets\Shaders\Floor_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_AM_Leverbase.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Pitcher.shader" />
      <None Include="Assets\Shaders\Mat_SM_Padlock.shader" />
      <None Include="Assets\Shaders\Mat_Books_01.shader" />
+     <None Include="Assets\Shaders\Mat_Fireplace.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle1.shader" />
      <None Include="Assets\Shaders\Chain.shader" />
      <None Include="Assets\Shaders\Mat_Tapestry_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
+     <None Include="Assets\Shaders\Mat_SM_CopperSkillet.shader" />
+     <None Include="Assets\Shaders\Mat_SM_DutchOven.shader" />
      <None Include="Assets\Shaders\ColumnRound_1_Mat_B.shader" />
      <None Include="Assets\Shaders\Wall_Doorway_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\licences.txt" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
+     <None Include="Assets\Shaders\Mat_Bench.shader" />
      <None Include="Assets\Shaders\NewShader.shader" />
      <None Include="Assets\Shaders\Mat_Chair.shader" />
      <None Include="Assets\Rewired\Documentation\ReadMe.txt" />
@@ -163,6 +172,7 @@
      <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\Shaders\Mat_Torture_Wheel.shader" />
+     <None Include="Assets\Shaders\Mat_SM_WoodenChair.shader" />
      <None Include="Assets\Shaders\Mat_Chest.shader" />
      <None Include="Assets\Shaders\ColumnsRuined_1_Mat.shader" />
      <None Include="Assets\Shaders\Bread.shader" />
@@ -175,9 +185,12 @@
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Parallax.shader" />
      <None Include="Assets\Shaders\Steve.shader" />
      <None Include="Assets\Shaders\Mat_AM_Arrow.shader" />
+     <None Include="Assets\Shaders\Mat_NightStand.shader" />
+     <None Include="Assets\Shaders\Mat_SM_MoldyBread.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle2.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
      <None Include="Assets\Shaders\Wall_4_Cutout_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_SM_CopperPot.shader" />
      <None Include="Assets\Shaders\Bones_1_Mat.shader" />
      <None Include="Assets\Shaders\SpikeTrap_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_SM_Barrel.shader" />
@@ -201,11 +214,13 @@
      <None Include="Assets\Shaders\Mat_CoatOfArms.shader" />
      <None Include="Assets\Shaders\MultiTexture.shader" />
      <None Include="Assets\Shaders\Mat_LionMount.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Table.shader" />
      <None Include="Assets\Exploder\3rd\P2T.txt" />
      <None Include="Assets\Shaders\Mat_BossDoor_A.shader" />
      <None Include="Assets\Shaders\TombBottom_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Cutlery.shader" />
      <None Include="Assets\Shaders\Mat_Baskets.shader" />
      <None Include="Assets\Shaders\Mat_Log.shader" />
      <None Include="Assets\Shaders\Mat_Padlock.shader" />
@@ -215,10 +230,10 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>C:/Senior Project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>C:/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
